[package]
name = "codetools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ct"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
# tracing-subscriber = { version = "0.3", default-features = false }
tracing-subscriber = "0.3"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

[dev-dependencies]
assert_matches = "1.5"
